<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_shadow_grove"
    android:paddingStart="32dp"
    android:paddingTop="16dp"
    android:paddingEnd="32dp"
    android:paddingBottom="16dp">

    <TextView
        android:id="@+id/textStoryTitle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:fontFamily="@font/arcade"
        android:gravity="center"
        android:includeFontPadding="false"
        android:text="@string/lost_garden_title"
        android:textColor="@color/bb_white"
        android:textSize="@dimen/header_text_size"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textStoryMessage"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="80dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="80dp"
        android:layout_marginBottom="24dp"
        android:background="@drawable/bb_dialog_light"
        android:fontFamily="@font/arcade"
        android:gravity="center"
        android:includeFontPadding="false"
        android:lineSpacingExtra="3dp"
        android:padding="24dp"
        android:text="@string/lost_garden_story"
        android:textColor="@color/bb_black"
        android:textSize="@dimen/body_text_size"
        app:autoSizeMaxTextSize="16sp"
        app:autoSizeMinTextSize="10sp"
        app:autoSizeTextType="uniform"
        app:layout_constraintBottom_toTopOf="@id/storyButtonRow"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/textStoryTitle" />

    <LinearLayout
        android:id="@+id/storyButtonRow"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:gravity="center"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <Button
            android:id="@+id/buttonStoryStart"
            android:layout_width="300dp"
            android:layout_height="@dimen/button_height"
            android:background="@drawable/bb_button_green"
            android:fontFamily="@font/arcade"
            android:includeFontPadding="false"
            android:text="@string/start_adventure"
            android:textAllCaps="false"
            android:textColor="@color/bb_white"
            android:textSize="@dimen/button_text_size" />

        <Button
            android:id="@+id/buttonStoryMainMenu"
            android:layout_width="300dp"
            android:layout_height="@dimen/button_height"
            android:layout_marginStart="@dimen/medium_gap"
            android:background="@drawable/bb_button_gray"
            android:fontFamily="@font/arcade"
            android:includeFontPadding="false"
            android:text="@string/main_menu"
            android:textAllCaps="false"
            android:textColor="@color/bb_white"
            android:textSize="@dimen/button_text_size" />
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>
